rns-lang/tests/snapshots/parser-outside_class_directive-dot_end_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.end method ; trailing comment
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: unexpected directive
   ╭─[ test_data/integration/parser/outside_class_directive/dot_end_outside.ja:1:1 ]
   │
 1 │ .end method ; trailing comment
   │ ──┬─  
   │   ╰─── The '.end' directive cannot appear before a class is defined.
   │ 
   │ Note: A Java assembly file must start with a '.class' definition.
───╯
